<resources>
    <string name="app_name">update</string>
    <!--功能-->
    <string name="system_maintenance">System maintenance</string>
    <string name="func_app">APP update</string>
    <string name="func_os">OS update</string>
    <string name="func_vacopy">VA</string>
    <string name="func_install">Install</string>
    <string name="func_uninstall">Uninstall</string>
    <string name="func_setting">Setting</string>
    <string name="func_version">Version</string>

    <!--升级-->
    <string name="update">Update</string>
    <string name="a_key_update">One-click</string>
    <string name="app">APP</string>
    <string name="mcu">MCU</string>
    <string name="os">OS</string>
    <string name="va">VA</string>
    <string name="restore_factory">Restore factory</string>
    <string name="version">version: V%1$s </string>

    <string name="va_copy">Copy</string>
    <string name="va_from_path">Source path</string>
    <string name="va_target_path">Target path</string>
    <string name="va_file_manager">File manager</string>
    <string name="va_file_manager_btn">Open</string>
    <string name="va_check">Check VA</string>
    <string name="va_check_btn">Check</string>

    <!--应用-->
    <string name="a_key_install_app">One-click</string>
    <string name="a_key_uninstall_app">One-click</string>
    <string name="select_item_all">All</string>
    <string name="show_system_app">System</string>
    <string name="app_open">Start</string>
    <string name="app_install">Install</string>
    <string name="app_install_again">Reinstall</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="app_installed">Installed</string>
    <string name="app_install_success">Successful installation</string>
    <string name="app_install_fail">Installation failed</string>

    <!--信息栏-->
    <string name="menu_title">Information</string>
    <string name="menu_clear">Clear</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>

    <!--infor-->
    <string name="update_infor">update</string>
    <string name="not_update_infor">no update</string>
    <string name="copy">copy</string>
    <string name="download">download</string>
    <string name="install">install</string>
    <string name="uninstall">uninstall</string>
    <string name="success">successed</string>
    <string name="failed">failed</string>
    <string name="no_file">no file</string>
    <string name="time_out">time out</string>
    <string name="no_free_size">not enough space</string>
    <string name="copy_file_error">copy file error</string>
    <string name="file_Illegal">file error</string>
    <string name="no_system_permission">no permission</string>
    <string name="check_file">test file</string>
    <string name="start">start</string>
    <string name="os_same">Same OS, no need to upgrade</string>
    <string name="reboot">If the update is successful,The upgrade software will automatically exit. Please restart the application!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
