<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:FunctionItem="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              android:orientation="horizontal"
              android:paddingBottom="66dp"
              android:paddingLeft="40dp"
              android:paddingRight="10dp"
              android:paddingTop="66dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="881"
        android:background="@drawable/bg_function_item"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <com.tapc.update.ui.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="46dp"
            android:text="系统维护"
            android:textColor="#b3b3b3"
            android:textSize="@dimen/tx_size1"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="136dp"
            android:fadeScrollbars="true"
            android:orientation="vertical"
            android:scrollbarFadeDuration="0"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.tapc.update.ui.view.FunctionItem
                    android:id="@+id/func_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    FunctionItem:ic="@drawable/cb_update_app"
                    FunctionItem:name="@string/func_app">

                </com.tapc.update.ui.view.FunctionItem>

                <com.tapc.update.ui.view.FunctionItem
                    android:id="@+id/func_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    FunctionItem:ic="@drawable/cb_update_os"
                    FunctionItem:name="@string/func_os">

                </com.tapc.update.ui.view.FunctionItem>

                <com.tapc.update.ui.view.FunctionItem
                    android:id="@+id/func_vacopy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    FunctionItem:ic="@drawable/cb_vacopy"
                    FunctionItem:name="@string/func_vacopy">

                </com.tapc.update.ui.view.FunctionItem>

                <com.tapc.update.ui.view.FunctionItem
                    android:id="@+id/func_install"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    FunctionItem:ic="@drawable/cb_install"
                    FunctionItem:name="@string/func_install">

                </com.tapc.update.ui.view.FunctionItem>

                <com.tapc.update.ui.view.FunctionItem
                    android:id="@+id/func_uninstall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    FunctionItem:ic="@drawable/cb_uninstall"
                    FunctionItem:name="@string/func_uninstall">

                </com.tapc.update.ui.view.FunctionItem>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="381"
        android:background="@drawable/bg_frame"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="48dp"
            android:paddingTop="64dp">
        </FrameLayout>
    </LinearLayout>

</LinearLayout>