<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_marginBottomPercent="3%h"
        app:layout_marginLeftPercent="1%w"
        app:layout_marginRightPercent="2%w"
        app:layout_marginTopPercent="3%h">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_message"
            android:orientation="vertical"
            app:layout_heightPercent="70%"
            app:layout_paddingPercent="6%">

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_marginBottomPercent="4%">

                <com.tapc.update.ui.view.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/menu_title"
                    android:textColor="@color/tx_nomal3"
                    android:textSize="@dimen/tx_size2"/>

                <com.tapc.update.ui.view.CustomTextView
                    android:id="@+id/infor_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/menu_clear"
                    android:textColor="@color/tx_nomal4"
                    android:textSize="@dimen/tx_size2"/>
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F2F2F2"
                app:layout_paddingPercent="2%">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/infor_lv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_marginTopPercent="6%h">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/menu_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/tx_nomal1"
                    android:textSize="@dimen/tx_size2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/menu_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_exit"
                    android:gravity="center"
                    android:text="@string/exit"
                    android:textColor="@color/tx_nomal3"
                    android:textSize="@dimen/tx_size2"/>
            </LinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>